feat: impl share features
